Add more custom styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,12 @@ form button {
   margin: 20px 0;
 }
 
+#doctors img {
+  float: left;
+  height: 100px;
+  width: auto;
+}
+
 div.doctor h3 {
   font-size: 20px;
 }
